[metadata]
name = opi-vault-library
version = 0.1
description = vault library.
long_description = file: README.rst
url = https://github.com/jalcantaram/ea_vault_library
author = JC
author_email = jcarlosalcantara.mtz@gmail.com
license = MIT

project_urls =
    Homepage = https://github.com/jalcantaram/ea_vault_library

classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PyPDF2
    pycryptodome
    python-dotenv